[package]
name = "dollas-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = {version = "0.6.6", features = ["cors"]}
